--- a/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
@@ -52,8 +52,8 @@ We randomly selected 500 samples from the 2017--2018 UPC-EC data to train the en
  
 A better model performance is achieved with function (1). The ensembled weights for the base-string model and BERT model are 0.738 and 0.262, respectively. The experiment result indicates that the base-string model contributes more than the BERT model when the ensemble model makes predictions. The prediction result for the 2017--2018 data is:  
 
-- Success@5 = 0.727 
-- NDCG@5 = 0.528  
+- Success@5: 0.727 
+- NDCG@5: 0.528  
 
 Computation time is 6 hours. 
 
@@ -67,7 +67,41 @@ Our next step will focus on adding the newly generated EC data into our knowledg
 
 3. **Effective communication** with the tech team would be very helpful for environment setting during early stages.  
 
+::: grid
+::: {.g-col-12 .g-col-md-6}
+::: article-btn
+[&larr; Part 3: First place winners](/case-studies/posts/2023/05/XX/03-first-place-winners.qmd)
+:::
+:::
 
+::: {.g-col-12 .g-col-md-6}
+::: article-btn
+[Part 5: Third place winners &rarr;](/case-studies/posts/2023/05/XX/05-third-place-winners.qmd)
+:::
+:::
+:::
+
+::: further-info
+::: grid
+::: {.g-col-12 .g-col-md-12}
+About the authors
+: **Yang Wu** and **Kai Zhang** are PhD students, and **Xiaozhong Liu** is an associate professor at Worcester Polytechnic Institute. **Aishwarya Budhkar** is a PhD student and **Xuhong Zhang** is an assistant professor at Indiana University Bloomington.
+
+:::
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+:   © 2023 Yang Wu, Aishwarya Budhkar, Kai Zhang, Xuhong Zhang, and Xiaozhong Liu
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+:   Wu, Yang, Aishwarya Budhkar, Kai Zhang, Xuhong Zhang, and Xiaozhong Liu. 2023. "Food for Thought: Second place winners -- DeepFFTLink." Real World Data Science, May XX, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/05/XX/04-second-place-winners.html)
+:::
+:::
+:::
 
 ## References 
 
