final checks and embed-resources added

--- a/case-studies/posts/2023/05/XX/00-food-for-thought.qmd
+++ b/case-studies/posts/2023/05/XX/00-food-for-thought.qmd
@@ -11,7 +11,10 @@ author: Brian Tarran and Julia Lane
 date: 05/XX/2023
 toc: false
 # image: images/stephanie-hare-bw.png
-# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
+# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
+format:
+  html:
+    embed-resources: true  
 ---
 There’s a saying: “You are what you eat.” Its meaning is somewhat open to interpretation, as with many such sayings, but it’s typically used to make the point that if you want to *be* well, you need to eat well. Nutrition scientists and dieticians spend their careers trying to figure out what “eating well” looks like – the foods the human body needs, in what quantities, and how best to consume them. Their research informs advice and guidance issued by health professionals and governments. Ultimately, though, the choice of what to eat falls to us – individuals and families – and that choice is, in turn, informed by our tastes, the availability of foodstuffs in our local stores, and their price and affordability.
 
@@ -23,9 +26,8 @@ Figuring all this out is where something called the Purchase to Plate Crosswalk 
 
 But what if machine learning can help? That question inspired a competition, the Food for Thought Challenge, organized by the Coleridge Initiative, a nonprofit organization working with governments to ensure that data are more effectively used for public decision-making. Researchers and data scientists were invited to use machine learning and natural language processing to more efficiently link data on supermarket products to nutrient databases.
 
-This special collection of articles tells the story of the Food for Thought Challenge. We begin by exploring the [policy issues](/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd) that drive the development of the PPC – the need to understand the national diet, developing healthy diet plans, and costing up those plans – and the issues posed by record linkage. Next, we learn about [the nature of the challenge and the structure of the competition in more detail](link), and then the [three](link) [winning](link) [teams](link) walk us through their solutions. We end the collection with some closing thoughts on [the value of competitions for addressing data scientific challenges in the public sector](link).
+This special collection of articles tells the story of the Food for Thought Challenge. We begin by exploring the [policy issues](/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd) that drive the development of the PPC – the need to understand the national diet, developing healthy diet plans, and costing up those plans – and the issues posed by record linkage. Next, we learn about [the nature of the challenge and the structure of the competition in more detail](/case-studies/posts/2023/05/XX/02-competition-design.qmd), and then the [three](/case-studies/posts/2023/05/XX/03-first-place-winners.qmd) [winning](/case-studies/posts/2023/05/XX/04-second-place-winners.qmd) [teams](/case-studies/posts/2023/05/XX/05-third-place-winners.qmd) walk us through their solutions. We end the collection with some closing thoughts on [the value of competitions for addressing data scientific challenges in the public sector](/case-studies/posts/2023/05/XX/06-value-of-competitions.qmd).
 
-<!-- Create fwd/bk buttons for navigation? -->
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 ::: article-btn
