--- a/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
@@ -11,7 +11,10 @@ author: Andrea Carlson and Thea Palmer Zimmerman
 date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
-# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
+# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
+format:
+  html:
+    embed-resources: true  
 ---
 ::: {.callout-important}
 ## Disclaimer
@@ -39,7 +42,7 @@ On the surface, the linking process may appear simple: both the FNDDS and retail
 
 Figure 1 shows the process USDA uses to develop matches between scanner data and FNDDS. We start the linking process by creating homogeneous groups of items in the IRI product dictionary to make the first round of automated matching more efficient. To save time we use the categories created by IRI, which loosely follow the section of a grocery store – produce, canned beans, baking mixes, bread, etc. Once the linking categories for scanner data are established, we select appropriate items from the FNDDS. Since the FNDDS is highly structured, this selection is usually straightforward.
 
-![](images/pt1-fig1.png)
+[![](images/pt1-fig1.png){width="700px"}](images/pt1-fig1.png)
 
 :::{.figure-caption}
 **Figure 1:** Process currently used to create the matches between the USDA Food and Nutrient Database for Dietary Studies (FNDDS) and the IRI InfoScan and Consumer Network product dictionaries. Source: Author provided.
