--- a/case-studies/posts/2023/05/XX/05-third-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/05-third-place-winners.qmd
@@ -11,7 +11,10 @@ author: Yifan (Rosetta) Hu and Mandy Korpusik
 date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
-# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
+# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
+format:
+  html:
+    embed-resources: true  
 ---
 
 Undergraduate student Rosetta Hu was responsible for writing the Python script that pre-processes the 2015--2016 UPC, EC, and PPC data for training neural network models. Her script randomly sampled five negative EC descriptions for every positive match between a UPC and EC code. Professor Mandy Korpusik performed the remaining work, including setting up the environment, training the BERT model, and evaluation. Hu spent roughly 10 hours on the competition, and Korpusik spent roughly 40 hours of work (and many additional hours running and monitoring the training and testing scripts).
