--- a/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/04-second-place-winners.qmd
@@ -11,7 +11,10 @@ author: Yang Wu, Aishwarya Budhkar, Kai Zhang, Xuhong Zhang, and Xiaozhong Liu
 date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
-# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
+# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
+format:
+  html:
+    embed-resources: true  
 ---
 DeepFFTLink team members: Yang Wu and Kai Zhang are PhD students at Worcester Polytechnic Institute. Aishwarya Budhkar is a PhD student at Indiana University Bloomington. Xuhong Zhang is an assistant professor at Indiana University Bloomington. Xiaozhong Liu is an associate professor at Worcester Polytechnic Institute.
 
