embed-resources added

--- a/case-studies/posts/2023/05/XX/02-competition-design.qmd
+++ b/case-studies/posts/2023/05/XX/02-competition-design.qmd
@@ -11,7 +11,10 @@ author: Zheyuan Zhang and Uyen Le
 date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
-# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
+# image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
+format:
+  html:
+    embed-resources: true   
 ---
 Since 2014, the professional services firm Westat has been developing the Purchase to Plate Crosswalk (PPC) for the United States Department of Agriculture (USDA) Economic Research Service (ERS). The PPC links the retail food transactions database from IRI’s InfoScan service and the USDA Food and Nutrient Database for Dietary Studies (FNDDS). However, the current linkage process uses only partly automated data matching, meaning it is resource intensive, time consuming, and requires manual review.  
 
