links added/updated

--- a/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
+++ b/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
@@ -41,7 +41,7 @@ Our full list of interviewees, in order of appearance, are:
 
 **Detlef Nauck:** I think the regulators really have to look at this. It has come completely out of left field for them. All the regulators that we are monitoring, they regulate the space as it was three years ago -- they are mainly concerned about predictive models and bias. But if you look at, say, what Microsoft wants to do – putting GPT into Office 365 and into Bing -- that will completely change how people interact with and consume information. I think the large tech companies really have a responsibility here, when they make this public, to make sure that people understand what this technology actually is, and how it can be used and has to be used.  
 
-Also, they need to open up about how these things have been built. There are a lot of stories around how OpenAI used cheap labour in order to do the labelling and reinforcement learning for ChatGPT, and these things have to be become public knowledge; they need to become part of some kind of Kitemark for these models: “Ethically built, properly checked, hallucinate only a little bit. Whatever you do, don't take it for granted. Check it!” That's the kind of disclaimers they need to put on these models. 
+Also, they need to open up about how these things have been built. There are a lot of stories around [how OpenAI used cheap labour in order to do the labelling and reinforcement learning for ChatGPT](https://time.com/6247678/openai-chatgpt-kenya-workers/), and these things have to be become public knowledge; they need to become part of some kind of Kitemark for these models: “Ethically built, properly checked, hallucinate only a little bit. Whatever you do, don't take it for granted. Check it!” That's the kind of disclaimers they need to put on these models. 
 
 **Regulatory principles always seem to stress that AI systems should be understandable, and we should be able to explain how we get particular outputs. But a lot of our conversation has focused on how we don't really know how these models work. So, is that in itself a problem, and is it something that the data science community can help with -- to dig into how these things work and try and get that across -- to help meet these principles of explainability and interpretability?** 
 
@@ -69,7 +69,7 @@ Also, they need to open up about how these things have been built. There are a l
 
 **LN:** So, just to join those two things together: for me, the question is not, “Do we understand how ChatGPT works?” As Martin says, we don't understand how humans work, and surely we're trying to develop something that enhances human thinking in some way. The more important question for me is, “How do we know that what is produced is useful?” 
 
-**Giles, you mentioned previously that you're doing some work at Unilever around how to minimise hallucination. I don't know how much you can say on what direction that's going in, and how successful you expect that to be. But that's obviously going to be a really important part of refining these things to be more widely usable.** 
+**Giles, [you mentioned previously that you're doing some work at Unilever around how to minimise hallucination](https://realworlddatascience.net/careers/posts/2023/05/11/chatgpt-data-science-pt1.html). I don't know how much you can say on what direction that's going in, and how successful you expect that to be. But that's obviously going to be a really important part of refining these things to be more widely usable.** 
 
 **Giles Pavey:** I’m by no means an expert, but there's quite a lot you can do with both the architecture of it and also the pre-prompts that you put in -- more or less saying, "Quote what the source is, and if you're not sure, then tell me you're not sure.” I think what's interesting is the question of whether we’ll have to rely on OpenAI or Microsoft to do that work, and it will be just another thing that we have to trust them for? Or will it be something that people within an organisation can put in themselves?  
 
@@ -79,10 +79,10 @@ Also, they need to open up about how these things have been built. There are a l
 
 **To close us out, I’d like to return to a question Trevor posed earlier, which is how organisations like the Royal Statistical Society might help companies to embrace LLMs and start using them, so that everyone can benefit from the technology?** 
 
-**Adam Davison:** My instinct is that there’s some great parallel here with the stuff that the Data Science and AI Section have been doing in general, where we've said, “OK, there's lots of good advice out there on how to do things in data science, but how do you make it practical? How do you make it real? How do you apply those ethical principles? How do you make sure you have people with the right technical understanding in charge of projects to get value?” If, five years ago, the hype around data science was leading organisations to hire 100 data scientists in the hope that something innovative would happen, well then, we don't want those same organisations now thinking that they need to hire 100 prompt engineers and keep their fingers crossed for something special. Our focus has been on “industrial strength data science”, so I think we can extend that to show what “industrial strength LLM usage” looks like in practice. 
+**Adam Davison:** My instinct is that there’s some great parallel here with the stuff that the Data Science and AI Section have been doing in general, where we've said, “OK, there's lots of good advice out there on how to do things in data science, but how do you make it practical? How do you make it real? How do you apply those ethical principles? How do you make sure you have people with the right technical understanding in charge of projects to get value?” If, five years ago, the hype around data science was leading organisations to hire 100 data scientists in the hope that something innovative would happen, well then, we don't want those same organisations now thinking that they need to hire 100 prompt engineers and keep their fingers crossed for something special. Our focus has been on “[industrial strength data science](https://realworlddatascience.net/viewpoints/newsletter/)”, so I think we can extend that to show what “industrial strength LLM usage” looks like in practice. 
 
 ::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
-Part two of our conversation with the Royal Statistical Society's Data Science and AI Section will be published soon. Stay tuned!
+Want to hear more from the RSS Data Science and AI Section? Sign up for its newsletter at [rssdsaisection.substack.com](https://rssdsaisection.substack.com/).
 :::
 
 ::: {.article-btn}
