--- a/viewpoints/newsletter/index.qmd
+++ b/viewpoints/newsletter/index.qmd
@@ -1,9 +1,9 @@
 ---
 pagetitle: Newsletter | Viewpoints | Real World Data Science
 title: "Industrial Strength Data Science"
-subtitle: The newsletter of the Royal Statistical Society's Data Science & AI Section
+subtitle: The newsletter of the Royal Statistical Society's Data Science and AI Section
 description: |
-  The **Data Science & AI Section** of the Royal Statistical Society is the membership group representing data and AI scientists in the UK. It was established in 2017 to ensure the long-term success of data science as a profession. To find out more about the section and its activities, and to register for its monthly newsletter, visit [datasciencesection.org](https://datasciencesection.org/).
+  The **Data Science and AI Section** of the Royal Statistical Society is the membership group representing data and AI scientists in the UK. It was established in 2017 to ensure the long-term success of data science as a profession. To find out more about the section and its activities, visit [the RSS website](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/).
 listing:
   template: rssdsai-newsletter.ejs
   contents: rssdsai-newsletter.yml
