--- a/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
+++ b/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
@@ -131,11 +131,21 @@ Can the Royal Statistical Society help non-tech companies embrace large language
 **TDF:** Will experts like us actually be able to check it because of the speed that new versions are coming out and the developments that are happening? Is it going to take us six months to check that GPT-3.5 works? Well, too late, a month later GPT-4’s out! I just think that pace is going to keep accelerating.
 
 ::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
-Part two of our conversation with the Royal Statistical Society's Data Science and AI Section will be published soon. Stay tuned!
+Want to hear more from the RSS Data Science and AI Section? Sign up for its newsletter at [rssdsaisection.substack.com](https://rssdsaisection.substack.com/).
 :::
 
+::: grid
+::: {.g-col-12 .g-col-md-6}
 ::: {.article-btn}
 [Back to Careers](/careers/index.qmd)
+:::
+:::
+
+::: {.g-col-12 .g-col-md-6}
+::: {.article-btn}
+[Read part two &rarr;](/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd)
+:::
+:::
 :::
 
 ::: further-info
