--- a/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
+++ b/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
@@ -1,12 +1,12 @@
 ---
-# title: How is ChatGPT changing data science?
-# description: |
-#   We sit down with the Royal Statistical Society’s Data Science and AI Section to hear how large language models are becoming part of the data science toolkit, and to consider what this new development means for data science teams and skillsets.        
+title: "Large language models: Do we need to understand the maths, or simply recognise the limitations?"
+description: |
+  Do we need to understand the inner workings of large language models before we use them? Or, is it enough to simply teach people to recognise that model outputs can't always be relied upon, and that some use cases are better than others? Members of the Royal Statistical Society’s Data Science and AI Section discuss these and other questions in part two of our Q&A.        
 categories:
-  # - Large language models
-  # - AI
-  # - Skills
-  # - People
+  - Large language models
+  - AI
+  - Communication
+  - Regulation
 author: Brian Tarran
 date: 05/18/2023
 toc: false
@@ -35,7 +35,11 @@ Our full list of interviewees, in order of appearance, are:
 
 - **Giles Pavey**, global director for data science at Unilever, and DS&AI vice-chair. 
 
-- **Adam Davison**, head of data science at the Advertising Standards Authority, and DS&AI committee member. 
+- **Adam Davison**, head of data science at the Advertising Standards Authority, and DS&AI committee member.
+
+\
+---
+\
 
 **Anjali Mazumder:** I work in research, but I also sit in the crux of government, industry, and civil society, looking at how they're using these technologies. For me, it’s about knowing what the opportunities are but also understanding the limitations, the risks and the harms, and how we balance those and put in place oversight mechanisms that act as safeguards to ensure that these technologies don't cause harm. We're taking a very socio-technical approach that requires an interdisciplinary team to understand these issues and what should be done. Part of this is about not only the outcomes and the impact but also the upstream side of it – recognising that these models have been built on the work of people who have done the labelling, and that this also has implications -- to say nothing of the associated environmental issues or energy issues! 
 
@@ -85,8 +89,18 @@ Also, they need to open up about how these things have been built. There are a l
 Want to hear more from the RSS Data Science and AI Section? Sign up for its newsletter at [rssdsaisection.substack.com](https://rssdsaisection.substack.com/).
 :::
 
+::: grid
+::: {.g-col-12 .g-col-md-6}
+::: {.article-btn}
+[&larr; Read part one](/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd)
+:::
+:::
+
+::: {.g-col-12 .g-col-md-6}
 ::: {.article-btn}
 [Back to Careers](/careers/index.qmd)
+:::
+:::
 :::
 
 ::: further-info
@@ -101,7 +115,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-12}
 How to cite
-:   Tarran, Brian. 2023. "How is ChatGPT changing data science?" Real World Data Science, May 11, 2023. [URL](https://realworlddatascience.net/careers/posts/2023/05/11/chatgpt-data-science-pt1.html)
+:   Tarran, Brian. 2023. "Large language models: Do we need to understand the maths, or simply recognise the limitations?" Real World Data Science, May 18, 2023. [URL](https://realworlddatascience.net/careers/posts/2023/05/18/chatgpt-data-science-pt2.html)
 :::
 :::
 :::
