keyline style added

--- a/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
+++ b/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
@@ -37,9 +37,9 @@ Our full list of interviewees, in order of appearance, are:
 
 - **Adam Davison**, head of data science at the Advertising Standards Authority, and DS&AI committee member.
 
-\
+::: keyline
 ---
-\
+:::
 
 **Anjali Mazumder:** I work in research, but I also sit in the crux of government, industry, and civil society, looking at how they're using these technologies. For me, it’s about knowing what the opportunities are but also understanding the limitations, the risks and the harms, and how we balance those and put in place oversight mechanisms that act as safeguards to ensure that these technologies don't cause harm. We're taking a very socio-technical approach that requires an interdisciplinary team to understand these issues and what should be done. Part of this is about not only the outcomes and the impact but also the upstream side of it – recognising that these models have been built on the work of people who have done the labelling, and that this also has implications -- to say nothing of the associated environmental issues or energy issues! 
 
