final text edits

--- a/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
+++ b/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
@@ -45,7 +45,7 @@ Our full list of interviewees, in order of appearance, are:
 
 **Detlef Nauck:** I think the regulators really have to look at this. It has come completely out of left field for them. All the regulators that we are monitoring, they regulate the space as it was three years ago -- they are mainly concerned about predictive models and bias. But if you look at, say, what Microsoft wants to do – putting GPT into Office 365 and into Bing -- that will completely change how people interact with and consume information. I think the large tech companies really have a responsibility here, when they make this public, to make sure that people understand what this technology actually is, and how it can be used and has to be used.  
 
-Also, they need to open up about how these things have been built. There are a lot of stories around [how OpenAI used cheap labour in order to do the labelling and reinforcement learning for ChatGPT](https://time.com/6247678/openai-chatgpt-kenya-workers/), and these things have to become public knowledge; they need to become part of some kind of Kitemark for these models: “Ethically built, properly checked, hallucinate only a little bit. Whatever you do, don't take it for granted. Check it!” That's the kind of disclaimers they need to put on these models.
+Also, they need to open up about how these things have been built. There are a lot of stories around [how OpenAI used cheap labour in order to do the labelling and reinforcement learning for ChatGPT](https://time.com/6247678/openai-chatgpt-kenya-workers/), and these things have to become public knowledge; they need to become part of some kind of Kitemark for these models: “Ethically built, properly checked, hallucinate only a little bit. Whatever you do, don't take it for granted. Check it!” That's the kind of disclaimer they need to put on these models.
 
 ::: {.pullquote-container}
 ::: grid
@@ -83,13 +83,13 @@ There's a big assumption that you need to understand how LLMs work in order to b
 
 **We talked there about communication. There was a webinar recently by the [Royal Statistical Society’s Glasgow Local Group](https://rss.org.uk/membership/rss-groups-and-committees/groups/glasgow/), and the presenter, [Hannah Rose Kirk](https://www.hannahrosekirk.com/), showed how you can take tabular data and statistical results and ask ChatGPT to produce a nice paragraph or two that explains the numbers. Is this the sort of thing that any of you have experimented with? Have you had any successes at using ChatGPT to translate data into readable English that decision makers can act on?** 
 
-**Piers Stobbs:** I have an interesting use case. We had a basic survey: 200-odd responses, multiple languages, and we just said, “Please summarise the results of this survey contained in this CSV file.” And it came up with five or six relevant bullet points. What was amazing was that we could then interrogate it. For example, “Please compare the results that were in English versus in French, and describe the differences.” Again, it did it, but the issue was, was it all correct? Well, the bulk of it was. Now I am intrigued by whether you can ask it to do correlations and some actual statistical things on a dataset, and does it get that right? I don't know. We've not really got to that. But, to go back to one of the earlier discussion points around productivity, that initial survey work could have easily taken a week of someone's time if we didn’t run it through ChatGPT. 
+**Piers Stobbs:** I have an interesting use case. We had a basic survey: 200-odd responses, multiple languages, and we just said, “Please summarise the results of this survey contained in this CSV file.” And it came up with five or six relevant bullet points. What was amazing was that we could then interrogate it. For example, “Please compare the results that were in English versus in French, and describe the differences.” Again, it did it, but then you have the issue of, was it all correct? Well, the bulk of it was. Now I am intrigued by whether you can ask it to do correlations and some actual statistical things on a dataset, and does it get that right? I don't know. We've not really got to that. But, to go back to one of the earlier discussion points around productivity, that initial survey work could have easily taken a week of someone's time if we didn’t run it through ChatGPT. 
 
-**Trevor Duguid Farrant:** Piers, in this case you're interested in checking and seeing if it's right. If you'd asked a group of people to do that survey for you and get the results, you'd have just accepted whatever they gave you back, you wouldn’t have questioned it. 
+**Trevor Duguid Farrant:** Piers, in this case you're interested in checking and seeing if it's right. If you'd asked a group of people to do that survey for you and get the results, you'd have just accepted whatever they gave you back. You wouldn’t have questioned it. 
 
 **PS:** That’s true. And the results were plausible, certainly. 
 
-**AM:** I think one of the challenges is that the results could seem like they're plausible, right -- whether that's a statistical output or a text output. This was not a proper experiment, but I asked ChatGPT about colleagues and friends who are quite prominent researchers, asking, “Who is so-and-so?”, and it produced biographies that were quite plausibly them, but it wasn't them. It might have listed the correct PhD, say, but the date was off by a year, or the date was correct, but it was from the wrong institution. So, depending on what the issue is, these seemingly plausible results could have more serious implications. 
+**AM:** I think one of the challenges is that the results could seem like they're plausible, right -- whether that's a statistical output or a text output. This was not a proper experiment, but I asked ChatGPT about colleagues and friends who are quite prominent researchers, asking, “Who is so-and-so?”, and it produced biographies that were quite plausibly them, but it wasn't them. It might have listed the correct PhD, say, but the date was off by a year, or the date was correct but it was from the wrong institution. So, depending on what the issue is, these seemingly plausible results could have more serious implications. 
 
 **LN:** So, just to join those two things together: for me, the question is not, “Do we understand how ChatGPT works?” As Martin says, we don't understand how humans work, and surely we're trying to develop something that enhances human thinking in some way. The more important question for me is, “How do we know that what is produced is useful?”
 
@@ -98,7 +98,7 @@ There's a big assumption that you need to understand how LLMs work in order to b
 ::: {.g-col-12 .g-col-lg-12 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
 
-For me, the question is not, “Do we understand how ChatGPT works?” We don't understand how humans work, and surely we're trying to develop something that enhances human thinking in some way. The more important question is, “How do we know that what is produced is useful?”
+For me, the question is not, 'Do we understand how ChatGPT works?' We don't understand how humans work, and surely we're trying to develop something that enhances human thinking in some way. The more important question is, 'How do we know that what is produced is useful?'
 :::
 :::
 :::
@@ -111,7 +111,7 @@ For me, the question is not, “Do we understand how ChatGPT works?” We don't 
 
 **GP:** Arguably, the single biggest issue is, who elected Sam Altman (no-one) and are we as society happy with him having so much power over our future? 
 
-**To close us out, I’d like to return to a question Trevor posed earlier, which is how organisations like the Royal Statistical Society might help companies to embrace LLMs and start using them, so that everyone can benefit from the technology?** 
+**To close us out, I’d like to return to [a question Trevor posed earlier](http://localhost:5404/careers/posts/2023/05/11/chatgpt-data-science-pt1.html), which is: How might organisations like the Royal Statistical Society help companies to embrace LLMs and start using them, so that everyone can benefit from the technology?** 
 
 **Adam Davison:** My instinct is that there’s some great parallel here with the stuff that the Data Science and AI Section have been doing in general, where we've said, “OK, there's lots of good advice out there on how to do things in data science, but how do you make it practical? How do you make it real? How do you apply those ethical principles? How do you make sure you have people with the right technical understanding in charge of projects to get value?” If, five years ago, the hype around data science was leading organisations to hire 100 data scientists in the hope that something innovative would happen, well then, we don't want those same organisations now thinking that they need to hire 100 prompt engineers and keep their fingers crossed for something special. Our focus has been on “[industrial strength data science](https://realworlddatascience.net/viewpoints/newsletter/)”, so I think we can extend that to show what “industrial strength LLM usage” looks like in practice. 
 
@@ -139,7 +139,7 @@ Want to hear more from the RSS Data Science and AI Section? Sign up for its news
 Copyright and licence
 :   © 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This interview is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Photos are not covered by this licence. Portrait photos are supplied by interviewees and used with permission. ChatGPT homescreen photo by <a href="https://unsplash.com/@siva_photography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Levart_Photographer</a> on <a href="https://unsplash.com/photos/drwpcjkvxuU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This interview is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Photos are not covered by this licence.
   
 :::
 
