--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!chatgpt-data-science-pt1.qmd"
+    - "!chatgpt-data-science-pt2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd">
+<a href="/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## How is ChatGPT changing data science?
-We sit down with the Royal Statistical Society’s Data Science and AI Section to hear how large language models are becoming part of the data science toolkit, and to consider what this new development means for data science teams and skillsets.
+## Large language models: Do we need to understand the maths, or simply recognise the limitations?
+Do we need to understand the inner workings of large language models before we use them? Or, is it enough to simply teach people to recognise that model outputs can't always be relied upon? Part two of our Q&A with the RSS Data Science and AI Section.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2023/05/11/images/chatgpt-homescreen.png)
+![](careers/posts/2023/05/18/images/google-deepmind-52afknBiUk4-unsplash.png)
 :::
 :::
 
@@ -158,11 +158,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Quetelet’s emphasis on discovering the universal laws he believed govern social and biological phenomenon has not endured. But data scientists continue to appropriate laws from one area of science to study another.
-Jonathan Auerbach on the law of the flowering plants
+## In data science, it’s important to not lose sight of fundamentals such as statistics and mathematics. A lot of people can code-up models but it’s fair to say that only a portion of them appreciate how to do this responsibly.
+Tamanna Haque, lead data scientist at Jaguar Land Rover
 
 ::: {.button .button1}
-[Try the tutorial](ideas/tutorials/posts/2023/04/13/flowers.qmd)
+[Read Tamanna's career profile](careers/career-profiles/posts/2023/03/28/tamanna-haque.qmd)
 :::
 
 :::
@@ -200,11 +200,11 @@ Jonathan Auerbach on the law of the flowering plants
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## This is a story of making opportunity out of crisis, of the interaction between not just theory of change and technical implementation, but the 'political' process of negotiating these changes with stakeholders in a manner that led to better decisions. 
-Noah Wright on 'The politics of performance measurement'
+## Open science and reproducible research is really hard, and it requires a lot of technical knowledge. But you don’t have to be perfect right away. Going one step in the right direction is super important. 
+Heidi Seibold on why open science is 'just good science in the digital era'
 
 ::: {.button .button1}
-[Read the article](careers/posts/2023/04/18/politics-of-performance-measurement.qmd)
+[Watch the interview](viewpoints/interviews/posts/02/03/heidi-seibold.qmd)
 :::
 
 :::
